<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">搜索</string>
    <string name="settings">设置</string>
    <string name="notlogin">未登录</string>
    <string name="exit">退出</string>
    <string name="hall">大厅</string>
    <string name="home">小窝</string>
    <string name="conversation">会话</string>
</resources>
