<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <LinearLayout
       android:id="@+id/lllayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F5F5F5" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_weight="1"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/textView1"
               style="@style/tabTextStyle"
               android:textColor="@color/green"
               android:text="@string/hall" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_weight="1"
           android:orientation="vertical" >
	           
	       <TextView
	           android:id="@+id/textView2"
	           style="@style/tabTextStyle"
	           android:text="@string/home" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_weight="1"
           android:orientation="vertical" >
		       
	       <TextView
	           android:id="@+id/textView3"
	           style="@style/tabTextStyle"
	           android:text="@string/conversation" />

       </LinearLayout>



    </LinearLayout>

</LinearLayout>
