<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"
            android:paddingLeft="8dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notlogin"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_setting"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
        <ImageView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"
            android:paddingLeft="8dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_exit"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
        <ImageView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"
            android:paddingLeft="8dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exit"/>
   	</LinearLayout>
</LinearLayout>
